Changing namespace and updating README

--- a/Views/React/Index.cshtml
+++ b/Views/React/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Orchard.React.ViewModels.ReactViewModel
+﻿@model RadioSystems.React.ViewModels.ReactViewModel
 
 <div id="orchard-react"></div>
 
@@ -6,6 +6,6 @@
     <script>
         var initialUserState = JSON.parse('@Html.Raw(Model.UserJson)');
     </script>
-    <script src="@Url.Content("~/Modules/Orchard.React/Scripts/Orchard.React.js")"></script>
+    <script src="@Url.Content("~/Modules/RadioSystems.React/Scripts/RadioSystems.React.js")"></script>
 }
 
