--- a/Views/React/Index.cshtml
+++ b/Views/React/Index.cshtml
@@ -6,6 +6,6 @@
     <script>
         var initialUserState = JSON.parse('@Html.Raw(Model.UserJson)');
     </script>
-    <script src="@Url.Content("~/Modules/RadioSystems.React/Scripts/RadioSystems.React.js")"></script>
+    <script src="@Url.Content("~/Modules/RadioSystems.React/Scripts/Orchard.React.js")"></script>
 }
 
