Added an error modal and showError modal action. Reconfigured route definitions and store configuration o support async route loading and code splitting.

--- a/Views/React/Index.cshtml
+++ b/Views/React/Index.cshtml
@@ -6,6 +6,7 @@
     <script>
         var initialUserState = JSON.parse('@Html.Raw(Model.UserJson)');
     </script>
-    <script src="@Url.Content("~/Modules/RadioSystems.React/Scripts/Orchard.React.js")"></script>
+    <script src="@Url.Content("~/webpack/vendor.js")"></script>
+    <script src="@Url.Content("~/webpack/Orchard.React.js")"></script>
 }
 
